test/corpus/stylesheets.txt
============================
Rule sets
============================

#some-id {
  some-property: 5px;
}

---

(stylesheet
  (rule_set
    (selectors
      (id_selector
        (id_name)))
    (block
      (declaration
        (property_name)
        (integer_value
          (unit))))))
